# audacious-discord-rpc

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  audacious-plugin-rpc.cc  reinstall.nu
include/: audacious-discord-rpc.hpp  covers-cache.hpp  covers-fetcher.hpp  covers.hpp  fetch-lin.hpp  fetch-win.hpp
src/: audacious-discord-rpc.cc  audacious-discord-rpc.cpp  audacious-discord-rpc.hpp  cover-cache.hpp  cover-fetcher.hpp
